[gd_scene load_steps=6 format=3 uid="uid://dyg40a5hhkqva"]

[ext_resource type="PackedScene" uid="uid://cyunqtfv3tcr" path="res://assets/models/court/court.glb" id="1"]
[ext_resource type="Script" path="res://src/court.gd" id="5"]

[sub_resource type="PhysicsMaterial" id="11"]
rough = true
bounce = 0.41
absorbent = true

[sub_resource type="BoxShape3D" id="8"]
size = Vector3(10, 1.01273, 0.0807126)

[sub_resource type="BoxMesh" id="9"]

[node name="Court" type="Node3D"]
script = ExtResource("5")

[node name="Model" type="Node3D" parent="."]

[node name="court" parent="Model" instance=ExtResource("1")]

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.388625, 0)
physics_material_override = SubResource("11")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0917587, 0)
shape = SubResource("8")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape2" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.480384, 0)
shape = SubResource("8")

[node name="NorthSide" type="Node3D" parent="."]

[node name="p11" type="Marker3D" parent="NorthSide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.17569, 0, -6.36622)

[node name="p12" type="Marker3D" parent="NorthSide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0822729, 0, -6.36622)

[node name="p13" type="Marker3D" parent="NorthSide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0652659, 0, -6.36622)

[node name="p14" type="Marker3D" parent="NorthSide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.06132, 0, -6.36622)

[node name="p15" type="Marker3D" parent="NorthSide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -11.877)

[node name="SouthSide" type="Node3D" parent="."]

[node name="p11" type="Marker3D" parent="SouthSide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.17217, 0, 6.40339)

[node name="p12" type="Marker3D" parent="SouthSide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.070323, 0, 6.40339)

[node name="p13" type="Marker3D" parent="SouthSide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0695443, 0, 6.40339)

[node name="p14" type="Marker3D" parent="SouthSide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.0656, 0, 6.40339)

[node name="p15" type="Marker3D" parent="SouthSide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 11.886)

[node name="NE_T_FIELD_Overlay" type="MeshInstance3D" parent="."]
transform = Transform3D(2.01266, 0, 0, 0, 0.216358, 0, 0, 0, 3.06543, 2.0378, 0.0965655, -3.22022)
visible = false
mesh = SubResource("9")

[node name="NW_T_FIELD_Overlay" type="MeshInstance3D" parent="."]
transform = Transform3D(2.01266, 0, 0, 0, 0.216358, 0, 0, 0, 3.06543, -1.97436, 0.0965655, -3.22022)
visible = false
mesh = SubResource("9")

[node name="SW_T_FIELD_Overlay" type="MeshInstance3D" parent="."]
transform = Transform3D(2.01266, 0, 0, 0, 0.216358, 0, 0, 0, 3.06543, -1.97436, 0.0965655, 3.31386)
visible = false
mesh = SubResource("9")

[node name="SE_T_FIELD_Overlay" type="MeshInstance3D" parent="."]
transform = Transform3D(2.01266, 0, 0, 0, 0.216358, 0, 0, 0, 3.06543, 2.04398, 0.0965655, 3.31386)
visible = false
mesh = SubResource("9")

[editable path="Model/court"]
